# Social_Video_Audience_Sentiment_Intelligence

./: dvc.yaml  lgbm_model.pkl  main.py  pyproject.toml  requirements.txt  setup.py  tfidf_vectorizer.pkl
src/data/: data_preprocessing.py
src/model/: model_building.py
